--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@blueprintjs/core": "^6.4.1",
     "@tailwindcss/vite": "^4.1.18",
+    "mobx-react-lite": "^4.1.1",
     "polotno": "^2.34.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
