--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@blueprintjs/core": "^6.4.1",
+    "@blueprintjs/icons": "^6.3.2",
     "@tailwindcss/vite": "^4.1.18",
     "mobx": "^6.15.0",
     "mobx-react-lite": "^4.1.1",
