--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@blueprintjs/icons": "^6.3.2",
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.4",
+    "konva": "^10.2.0",
     "mobx": "^6.15.0",
     "mobx-react-lite": "^4.1.1",
     "nanoid": "^5.0.9",
