--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@blueprintjs/icons": "^6.3.2",
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.4",
+    "framer-motion": "^12.33.2",
     "konva": "^10.2.0",
+    "lucide-react": "^0.563.0",
     "mobx": "^6.15.0",
     "mobx-react-lite": "^4.1.1",
     "nanoid": "^5.0.9",
